Fixed Nav bar spacing

--- a/css/index.css
+++ b/css/index.css
@@ -189,25 +189,33 @@ footer nav a {
 
 
 /*NAV CSS*/
-
-nav {
-    margin: 40px 0px 10px 0px;
+header > nav {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: flex-start;
+    align-items: flex-end;
 }
 
-header nav a {
+nav {
+    margin: 20px 0px 10px 0px;
+    padding-bottom: 20px;
+}
+
+header > nav > a {
     color: black;
     text-decoration: none;
     font-size: 12px;
-}
+    padding-right: 95px;
 
-.hero-image {
-    width: 800px;
-    margin: 0 auto;
-    padding-bottom: 30px;
 }
 
 .logo {
-    margin-bottom: 10px;
+    margin-left: 25px;
+    margin-right: 40px;
+}
+
+/*HERO CSS*/
+.hero-image {
+    width: 800px;
+    margin: 0 auto;
+    padding-bottom: 20px;
 }
